--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -36,8 +36,7 @@
   font-style: normal;
   font-weight: 500;
   font-display: fallback;
-  src:
-    url("../fonts/museosanscyrl-500.woff") format("woff");
+  src: url("../fonts/museosanscyrl-500.woff") format("woff");
 }
 
 @font-face {
@@ -45,6 +44,5 @@
   font-style: normal;
   font-weight: 700;
   font-display: fallback;
-  src:
-    url("../fonts/museosanscyrl-700.woff") format("woff");
+  src: url("../fonts/museosanscyrl-700.woff") format("woff");
 }
