--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,7 +2,8 @@
 @import "mixin.scss";
 @import "fonts.scss";
 @import "global.scss";
-@import "blocks/header.scss";
 @import "blocks/aside.scss";
+@import "blocks/header.scss";
 @import "blocks/nav.scss";
 @import "blocks/contacts.scss";
+@import "blocks/aside-social.scss";
