--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,10 +1,10 @@
 $desktop-width: 1920px;
 
 $black: #212121;
-$grey: #F9F9FD;
-$yellow-light: #FFB125;
-$yellow-middle: #FEB300;
-$yellow-dark: #FF8F1E;
+$grey: #f9f9fd;
+$yellow-light: #ffb125;
+$yellow-middle: #feb300;
+$yellow-dark: #ff8f1e;
 
 
 $regular: "OpenSans", "Arial", sans-serif;
