--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,17 +1,16 @@
 .header {
-  background-color: #fff;
-
-  @include desktop {
-    padding-left: 160px;
-  }
+  background-color: #ffffff;
+  position: relative;
 }
 
 .header__container {
   padding: 12px 0;
   margin: 0 15px;
   display: flex;
+  flex-direction: column;
 
   @include desktop {
+    flex-direction: row;
     padding: 30px 160px 40px 35px;
     align-items: center;
   }
@@ -56,8 +55,8 @@
   margin-right: 10px;
   width: 35px;
   height: 35px;
-  background: #FFFFFF;
-  box-shadow: 0px 3px 10px rgba(52, 86, 104, 0.11);
+  background: #ffffff;
+  box-shadow: 0 3px 10px rgba(52, 86, 104, 0.11);
   background-size: 17px 17px;
   background-position: 50% 50%;
   background-repeat: no-repeat;
@@ -67,14 +66,14 @@
   @include desktop {
     display: none;
   }
-}
 
-.header__button--cart {
-  background-image: url("../img/header-cart.svg");
-}
+  &--cart {
+    background-image: url("../img/header-cart.svg");
+  }
 
-.header__button--call {
-  background-image: url("../img/header-call.svg");
+  &--call {
+    background-image: url("../img/header-call.svg");
+  }
 }
 
 .header__burger {
@@ -93,16 +92,37 @@
   @include desktop {
     display: none;
   }
+
+  &--opened {
+    background-image: url("../img/icon-menu-cross.svg");
+    background-size: 15px 15px;
+  }
 }
 
 .header__nav {
-  display: none;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100vw;
 
   @include desktop {
-    display: flex;
+    position: static;
+    flex-direction: row;
     margin-right: 90px;
+    width: auto;
+  }
+
+  &--hidden {
+    display: none;
+
+    @include desktop {
+      display: flex;
+    }
   }
 }
+
 
 .header__contacts-list {
   display: none;
