--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -12,3 +12,4 @@ $bold: "OpenSans-Bold", "Arial", sans-serif;
 $light: "OpenSans-Light", "Arial", sans-serif;
 $museoregular: "MuseoSansCyrl-500", "Arial", sans-serif;
 $museobold: "MuseoSansCyrlBold", "Arial", sans-serif;
+$museoextrabold: "MuseoSansCyrl-900", "Arial", sans-serif;
