--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,3 +7,5 @@
 @import "blocks/nav.scss";
 @import "blocks/contacts.scss";
 @import "blocks/aside-social.scss";
+@import "blocks/promo.scss";
+@import "blocks/slider.scss";
