--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,3 +9,5 @@
 @import "blocks/aside-social.scss";
 @import "blocks/promo.scss";
 @import "blocks/slider.scss";
+@import "blocks/slider-dots.scss";
+@import "blocks/slider-buttons.scss";
