Advantages without dots between

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -13,7 +13,7 @@
       left: 0;
       top: 50%;
       transform: translateY(-50%);
-      background: #ffffff;
+      background: $white;
       box-shadow: 0 3px 10px rgba(52, 86, 104, 0.11);
       border-radius: 5px;
       background-repeat: no-repeat;
