--- a/source/sass/blocks/slider-buttons.scss
+++ b/source/sass/blocks/slider-buttons.scss
@@ -54,8 +54,8 @@
       transform: translate(-75%, -50%) rotate(45deg);
       width: 14px;
       height: 14px;
-      border-right: 2px solid #ffffff;
-      border-top: 2px solid #ffffff;
+      border-right: 2px solid $white;
+      border-top: 2px solid $white;
     }
   }
 }
