--- a/source/sass/blocks/aside.scss
+++ b/source/sass/blocks/aside.scss
@@ -10,7 +10,7 @@
     top: 0;
     width: 160px;
     height: 100vh;
-    background: #ffffff;
+    background: $white;
   }
 }
 
@@ -45,7 +45,7 @@
     height: 55px;
     margin-top: 95px;
     margin-bottom: auto;
-    background: #ffffff;
+    background: $white;
     box-shadow: 0 3px 10px rgba(52, 86, 104, 0.11);
     border-radius: 5px;
     background-repeat: no-repeat;
