--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -1,5 +1,5 @@
 .nav {
-  background-color: #ffffff;
+  background-color: $white;
   border-bottom: 1px solid rgba(33, 33, 33, 0.1);
 
   @include desktop {
