--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -70,7 +70,7 @@
   border-radius: 60px;
   font-family: $bold;
   font-size: 12px;
-  color: #ffffff;
+  color: $white;
 
   @include desktop {
     padding: 23px 43px;
