--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,3 +11,5 @@
 @import "blocks/slider.scss";
 @import "blocks/slider-dots.scss";
 @import "blocks/slider-buttons.scss";
+@import "blocks/advantages.scss";
+@import "blocks/advantages-card.scss";
